#4: Add video in exercise2, small refactoring

--- a/pages/exercises/exercise1.html
+++ b/pages/exercises/exercise1.html
@@ -154,7 +154,6 @@
                 почувствуете максимальную нагрузку на пресс.
             </li>
         </ol>
-
         <h3>Скручивания в висе</h3>
         <img class="right_image" src="../../images/skruchivaniya-na-press-v-vise.jpg" alt="lesson1">
         <p>Технически сложный, но эффективный вариант для любителей тяжелого тренинга старой
@@ -179,7 +178,6 @@
                 неподвижного состояния.
             </li>
         </ol>
-
         <h3>Косые скручивания</h3>
         <img class="left_image" src="../../images/skruchivaniya-na-press-kosye.jpeg" alt="lesson1">
         <p>В этом варианте скручиваний основная часть нагрузки ложится на косые мышцы живота,
@@ -278,14 +276,14 @@
             <tr>
                 <td>1</td>
                 <td>Тяжелая</td>
-                <td>1. Подъем ног в висе: 4 подхода по 10-15 повторений.</p><p>2. Скручивания
+                <td>1. Подъем ног в висе: 4 подхода по 10-15 повторений.<p>2. Скручивания
                     лежа на полу: 3 подхода по 15-20 повторений.</p>
                     <p>3. Планка: 3 подхода по 45-90 секунд.</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Легкая</td>
-                <td>1. Скручивания лежа на наклонной скамье: 3 подхода по 12-15 повторений.</p>
+                <td>1. Скручивания лежа на наклонной скамье: 3 подхода по 12-15 повторений.
                     <p>2. Скручивания в блочном тренажере стоя на коленях: 2 подхода по 10-12
                         повторений.</td>
             </tr>
@@ -293,7 +291,7 @@
                 <td>3</td>
                 <td>Тяжелая</td>
                 <td>1. Скручивания лежа на наклонной скамье с дополнительным отягощением: 3
-                    подхода по 10-12 раз.</p><p>2. Косые скручивания: 4 подхода по 12-15
+                    подхода по 10-12 раз.<p>2. Косые скручивания: 4 подхода по 12-15
                         повторений.</p>
                     <p>3. Планка: 3 подхода по 60-90 секунд.</td>
             </tr>
@@ -306,20 +304,20 @@
                 <td>5</td>
                 <td>Тяжелая</td>
                 <td>1. Скручивания лежа на наклонной скамье с дополнительным отягощением: 3
-                    подхода по 12-15 раз.</p><p>2. Ситапы: 3 подхода по 10-12 раз.</p>
+                    подхода по 12-15 раз.<p>2. Ситапы: 3 подхода по 10-12 раз.</p>
                     <p>3. Планка: 3 подхода по 75-90 секунд.</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>Легкая</td>
-                <td>1. Скручивания лежа на полу: 3 подхода по 10-12 повторений.</p><p>2.
+                <td>1. Скручивания лежа на полу: 3 подхода по 10-12 повторений.<p>2.
                     Обратные скручивания: 2 подхода по 12-15 повторений.</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>Тяжелая</td>
                 <td>1. Скручивания лежа на наклонной скамье с дополнительным отягощением: 3
-                    подхода по 15-20 раз.</p><p>2. Ситапы с дополнительным отягощением: 3
+                    подхода по 15-20 раз.<p>2. Ситапы с дополнительным отягощением: 3
                         подхода по 10 раз.</p>
                     <p>3. Планка: 3 подхода по 90-120 секунд.</td>
             </tr>
@@ -332,17 +330,14 @@
         </table>
         <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/kBv1yyQN51E"
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
     </div>
 </div>
-
 <div class="footer">
     <p><a href="#">Политика конфиденциальности</a><br>
         <a href="#">Связаться с нами</a><br><br>
         All rights reserved<br>&copyЕ. Ю. Денисова, 2019</p>
-
 </div>
-
 </body>
 </html>
