--- a/pages/exercises/exercise1.html
+++ b/pages/exercises/exercise1.html
@@ -16,7 +16,7 @@
         <div class="nav "><a href="#"> Упражнения </a></div>
         <div class="nav"><a href="#"> Фитнес-центры </a></div>
         <div class="nav"><a href="#"> Тренеры </a></div>
-        <div class="nav"><a href="#"> ссылка </a></div>
+        <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="icon_menu" onclick="clickMenu()"><img src="../../images/menu.png" alt="menu"></div>
     <div class="share_bar">
