--- a/pages/exercises/exercise2.html
+++ b/pages/exercises/exercise2.html
@@ -16,7 +16,7 @@
         <div class="nav "><a href="#"> Упражнения </a></div>
         <div class="nav"><a href="#"> Фитнес-центры </a></div>
         <div class="nav"><a href="#"> Тренеры </a></div>
-        <div class="nav"><a href="#"> ссылка </a></div>
+        <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="icon_menu" onclick="clickMenu()"><img src="../../images/menu.png" alt="menu"></div>
     <div class="share_bar">
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div class="past_lesson"><a href="exercise1.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="#">Следущее</a></div>
+<div class="next_lesson"><a href="exercise3.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
         <h1>Жим лежа</h1>
