#2: Third page(add new page)

--- a/pages/exercises/exercise3.html
+++ b/pages/exercises/exercise3.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div class="past_lesson"><a href="exercise2.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="#">Следущее</a></div>
+<div class="next_lesson"><a href="exercise4.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
         <h1>Упражнение для растяжки шеи</h1>
@@ -41,23 +41,15 @@
                 точки
                 задержитесь на 2-3 секунды.
             </li>
-            <br>
             <li> После отклоните голову назад и также остановитесь для лучше растяжки на пару секунд.</li>
-            <br>
             <li>Не задерживайте дыхание дышите, при наклоне головы выдох, при опрокидывании назад вдох.</li>
-            <br>
             <li>Для лучшей растяжки при опускании головы вниз, слегка надавливайте руками на затылок.</li>
-            <br>
             <li> Помните шея это сгусток нервных окончаний, поэтому никакой резкости, всё делается плавно,
                 подконтрольными движениями.
             </li>
-            <br>
             <li> Также как на рисунке справа, выполните наклоны головы в сторону, для растяжки боковых мышц шеи</li>
-            <br>
-
             <li> Все надавливания руками носят умеренный характер, до ощущения лёгкого дискомфорта, но не резкой боли.
             </li>
-            <br>
         </ol>
         <img class="left_image" src="../../images/rastyazhka_shey_2.jpg" alt="lesson3">
         <h3>Вид второй:</h3>
@@ -65,7 +57,6 @@
             <li> Станьте прямо, медленно поверните голову влево, потянитесь как можно дальше, 2 секунды задержка, затем
                 в правую сторону, выполните по 5-6 поворотов в каждую сторону.
             </li>
-            <br>
             <li> После можете выполнить круговые движения головой, используйте полную амплитуду движения – максимально
                 наклоняя голову вперёд, вбок и назад.
             </li>
