#2: Third page(add video in exercise4)

--- a/pages/exercises/exercise4.html
+++ b/pages/exercises/exercise4.html
@@ -78,14 +78,20 @@
         <p>Если с вами нет наставника, который проконтролирует правильность техники, то выполняйте упражнение перед
             зеркалом. Также воспользуйтесь ковриком для фитнеса.</p>
         <ol>
-            <li>Примите упор лежа. Из этого положения поднимитесь таким образом, чтобы опираться только на ладони и пальцы ног. Кисти рук должны находится точно под плечами.</li>
+            <li>Примите упор лежа. Из этого положения поднимитесь таким образом, чтобы опираться только на ладони и
+                пальцы ног. Кисти рук должны находится точно под плечами.
+            </li>
             <li>Ноги не сгибайте, держите их ровными</li>
-            <li>Положение спины — абсолютно прямое. Лопатки опущены. Не округляйте спину и не выпячивайте копчик. Взгляд направлен вперед</li>
+            <li>Положение спины — абсолютно прямое. Лопатки опущены. Не округляйте спину и не выпячивайте копчик. Взгляд
+                направлен вперед
+            </li>
             <li>Пресс необходимо держать в максимальном напряжении и не расслаблять до конца выполнения планки.</li>
-            <li>Стопы можно поставить вместе, а можно развести до ширины плеч. Чем шире будут стоять стопы, тем легче выполнять упражнение, однако при этом вы уменьшите эффективность работы мышц.</li>
+            <li>Стопы можно поставить вместе, а можно развести до ширины плеч. Чем шире будут стоять стопы, тем легче
+                выполнять упражнение, однако при этом вы уменьшите эффективность работы мышц.
+            </li>
             <li>Дыхание — спокойное и непрерывное</li>
         </ol>
-        <h4>Усложнение упражнения</h4>
+        <h3>Усложнение упражнения</h3>
         <ul>
             <li><strong>Планка на одной ноге.</strong> Необходимо встать, соблюдая все вышесказанные правила и поднять
                 вверх одну ногу, удерживая положение тела в статике. Выполнив упражнение с одной ногой, повторите с
@@ -100,7 +106,7 @@
         <p>Принцип исполнения такой же как в планке на руках. Единственное отличие, в том, что опираетесь вы на
             предплечья. Для этого необходимо согнуть руки, локти нужно держать строго под плечами. Следите, чтобы
             позвоночник не прогибался, копчик не выпячивался, а пресс оставался в напряжении.</p>
-        <h4>Усложнение упражнения</h4>
+        <h3>Усложнение упражнения</h3>
         <ul>
             <li><strong>На одной ноге.</strong> Опираясь на локти, поднимите одну ногу вверх и задержитесь в таком
                 положении. Затем повторите со второй ногой.
@@ -113,6 +119,9 @@
                 возвращайтесь в начальное положение. Повторите несколько раз.
             </li>
         </ul>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/JOlhML9opNE"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         <h2>Польза и вред планки</h2>
         <p>Чем полезно упражнение планка? Условно пользу от него можно разбить на несколько составляющих, таких как
             польза для спины, ног и пресса. Давайте поговорим подробно о каждом случае в ракурсе пользы и вреда от
@@ -136,6 +145,9 @@
         <p>Хотя классическая планка выполняется в статическом положении и оказывает щадящее влияние на суставы,
             <strong>в некоторых случаях, например, при проблемах с голеностопом, упражнение может принести
                 вред.</strong></p>
+        <iframe class="right_image" width="560" height="315" src="https://www.youtube.com/embed/ikEbneDyq10"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         <h3>Для похудения</h3>
         <p>Отличная новость для желающих похудеть. Выполняя планку, вы сможете быстрее избавиться от лишних килограммов.
             Как известно, эффект похудения достигается в случае дефицита калорий. То есть необходимо тратить энергии
