#2: Third page (changed 5 exercise page)

--- a/pages/exercises/exercise5.html
+++ b/pages/exercises/exercise5.html
@@ -42,30 +42,29 @@
         <ol>
             <li>Встаньте прямо, ноги на ширине плеч. Согните колени и сделайте глубокий присед, опираясь руками в пол.
             </li>
-            <br>
             <li>Выпрыгните назад и примите позицию планки. Тело должно сохранять прямую линию, бедра и поясница не
                 должны пригибаться к полу. Ладони находятся строго под плечевыми суставами.
+                <img class="right_image" src="../../images/burpi.jpg" alt="Бурпи">
             </li>
-            <img class="right_image" src="../../images/Бурпи.jpg" alt="Бурпи"><br>
             <li>Согните локти назад и коснитесь грудью пола, при этом ваше тело остается ровной линией. Можно также
                 выполнять вариант берпи с обычным отжиманием параллельно полу без касания градью.
             </li>
-            <br>
             <li>Вернитесь в положении планки, сохраняя прямую линию тела.</li>
-            <br>
             <li>Прыгните вперед, подтянув колено к ногам. Бедра параллельно полу, не задирайте ягодицы вверх.</li>
-            <br>
             <li>Резко выпрыгните, поднимая руки и тело вверх. Обратите внимание, спина прямая, взгляд направляется
                 вперед, корпус и ноги образует прямую линию. Вес тела не переносится на спину, движение выполняется
                 легко и динамично.
             </li>
-            <br>
             <li>Затем приземлитесь и снова перейдите в глубокий присед, затем в планку и отжимание, стараясь выполнять
                 берпи в непрерывном темпе
             </li>
         </ol>
         <br><br>
-
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/sQXPK6mlqHU"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </p>
     </div>
 </div>
 <div class="footer">
