#2: Third page (changed 6 and 7 exercise page)

--- a/pages/exercises/exercise6.html
+++ b/pages/exercises/exercise6.html
@@ -30,7 +30,7 @@
 <div class="main_info">
     <div class="main_lesson">
         <h1>КОШКА</h1>
-
+        <img class="right_image" src="../../images/cat.jpg" alt="Кошка">
         <p>
             Это упражнение выглядит довольно странно, но оно заставляет работать ваши поперечные мышцы. Иногда для того,
             чтобы их задействовать, нужно принимать экстренные меры. Для того чтобы правильно выполнить это упражнение,
@@ -39,12 +39,12 @@
             и поддерживайте нейтральное положение спины и шеи.
         </p>
         <h3>Как правильно выполнять:</h3>
-        <ol><img class="right_image" src="#" alt="Кошка">
+        <ol>
             <li>Сделайте глубокий выдох, подкрутите таз внутрь. Втяните живот так, чтобы спина выгнулась дугой вверх,
                 опустите голову. Мышцы пресса в этом положении напряжены, а спина растягивается вверх. Вытягивайте спину
                 вверх как можно выше.
-            </li><br>
-            <li>Посчитайте мысленно до восьми и на вдохе медленно вернитесь в исходное положение, расслабьтесь.</li><br>
+            </li>
+            <li>Посчитайте мысленно до восьми и на вдохе медленно вернитесь в исходное положение, расслабьтесь.</li>
             <li>Вновь вдохните и прогните спину в обратном направлении, подняв голову и таз вверх. Растяните живот,
                 грудные мышцы.
             </li>
@@ -55,8 +55,13 @@
                 ребенка”, но это не обязательно. В позе дополнительно растягиваются мышцы спины – руки тянутся вперед, а
                 таз к пятками.
             </li>
-        </ul><br><br><br>
-
+        </ul>
+        <br><br><br>
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JAb6eEJHoUY"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </p>
     </div>
 </div>
 <div class="footer">
