--- a/pages/exercises/exercise7.html
+++ b/pages/exercises/exercise7.html
@@ -30,7 +30,7 @@
 <div class="main_info">
     <div class="main_lesson">
         <h1>ЛОДОЧКА</h1>
-
+        <img class="right_image"  width="500" height="360" src="../../images/lodka.jpg" alt="Лодочка">
         <p>
             Формирует мышечный корсет, уменьшает объём талии, прорабатывает широчайшие мышцы спины. Нагружает большую
             ягодичную мышцу, бедра и икроножные. «Лодочку» можно выполнять, лёжа на спине, а также лёжа на животе. Нам
@@ -40,14 +40,19 @@
         <h3>Как правильно выполнять:</h3>
         <ol>
             <li>Ложимся на пол на живот, ноги вместе, руки вытянули вперёд.
-            </li><br>
-            <li>На выдохе прогибаемся, стараясь поднять выпрямленные руки и ноги как можно выше. </li><br>
+            </li>
+            <li>На выдохе прогибаемся, стараясь поднять выпрямленные руки и ноги как можно выше.</li>
             <li>Задерживаемся в таком положении, ложимся на живот и расслабляем мышцы, дышим свободно.
             </li>
-        </ol><br>
+        </ol>
+        <br>
         <h3>Повторяем три раза. Время отдыха между подходами – одна минута.</h3>
         <br>
-
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/EN-d6Uygg9A"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </p>
     </div>
 </div>
 <div class="footer">
