#2: Third page (change all pages exercises)

--- a/pages/exercises/exercise1.html
+++ b/pages/exercises/exercise1.html
@@ -25,7 +25,7 @@
         <div class="share"><a href="#"> <img src="../../images/instagram.png" alt="instagram"> </a></div>
     </div>
 </div>
-<div class="past_lesson"><a href="#">Предыдущее</a></div>
+<div class="past_lesson"><a href="exercise8.html">Предыдущее</a></div>
 <div class="next_lesson"><a href="exercise2.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
@@ -54,16 +54,13 @@
             <li>Исходная позиция: атлет ложится на пол или коврик для фитнеса, ноги согнуты в коленях, плотно упритесь
                 ступнями в пол, руки отведите за голову.
             </li>
-            <br>
             <li>Делая выдох, плавно поднимите верхнюю часть корпуса, не меняя положение поясницы и ягодиц – они остаются
                 плотно прижатыми к полу. Верхнюю часть спины следует немного округлить, так Вам будет легче
                 сконцентрироваться на сокращении мышц пресса.
             </li>
-            <br>
             <li>Плавно продолжайте подъем торса, пока не ощутите, как нагрузка достигла своего пика. На секунду
                 задержитесь в этой позиции, чтобы дополнительно статически сократить мышцы.
             </li>
-            <br>
             <li>Начинайте опускаться вниз. Опускание корпуса должно быть подконтрольным. Не обязательно опускаться
                 полностью на пол, лучше остановиться приблизительно в десяти сантиметрах от него, когда мышцы пресса
                 будут наиболее растянуты. Работая в подобной сокращенной амплитуде, Вы увеличите эффективность этого
