--- a/pages/exercises/exercise8.html
+++ b/pages/exercises/exercise8.html
@@ -25,11 +25,11 @@
         <div class="share"><a href="#"> <img src="../../images/instagram.png" alt="instagram"> </a></div>
     </div>
 </div>
-<div class="past_lesson"><a href="exercise2.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="#">Следущее</a></div>
+<div class="past_lesson"><a href="exercise7.html">Предыдущее</a></div>
+<div class="next_lesson"><a href="exercise1.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
-        <h1>СУПЕРМЕН</h1>
+        <h1>Супермен</h1>
         <img class="right_image" width="560" height="360" src="../../images/superman.jpg" alt="Супермен">
         <p>
             Это упражнение популярно везде, как для тренировок спины в домашних условиях, так и для тяжелой атлетики.
