--- a/pages/exercises/exercise4.html
+++ b/pages/exercises/exercise4.html
@@ -26,10 +26,10 @@
     </div>
 </div>
 <div class="past_lesson"><a href="exercise3.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="#">Следущее</a></div>
+<div class="next_lesson"><a href="exercise5.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
-        <h1>Упражнение планка</h1>
+        <h1>Планка</h1>
         <p>Упражнение планка считается одним из самых эффективных упражнений для прокачки мышц пресса.
             Популярность это упражнение получило благодаря простоте тренировки и мнению о том, что оно хорошо
             помогает при похудении. Так ли это? Об этом и о том, как правильно делать это упражнение, мы расскажем
