--- a/pages/exercises/exercise5.html
+++ b/pages/exercises/exercise5.html
@@ -25,11 +25,11 @@
         <div class="share"><a href="#"> <img src="../../images/instagram.png" alt="instagram"> </a></div>
     </div>
 </div>
-<div class="past_lesson"><a href="exercise2.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="#">Следущее</a></div>
+<div class="past_lesson"><a href="exercise4.html">Предыдущее</a></div>
+<div class="next_lesson"><a href="exercise6.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
-        <h1>БУРПИ</h1>
+        <h1>Бурпи</h1>
         <p>
         <p>
             Бурпи – это, вероятно, лучшее упражнения для всего тела из всех, которые вы когда-либо делали. Они
