--- a/pages/exercises/exercise6.html
+++ b/pages/exercises/exercise6.html
@@ -25,11 +25,11 @@
         <div class="share"><a href="#"> <img src="../../images/instagram.png" alt="instagram"> </a></div>
     </div>
 </div>
-<div class="past_lesson"><a href="exercise2.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="#">Следущее</a></div>
+<div class="past_lesson"><a href="exercise5.html">Предыдущее</a></div>
+<div class="next_lesson"><a href="exercise7.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
-        <h1>КОШКА</h1>
+        <h1>Кошка</h1>
         <img class="right_image" src="../../images/cat.jpg" alt="Кошка">
         <p>
             Это упражнение выглядит довольно странно, но оно заставляет работать ваши поперечные мышцы. Иногда для того,
