--- a/pages/exercises/exercise7.html
+++ b/pages/exercises/exercise7.html
@@ -25,11 +25,11 @@
         <div class="share"><a href="#"> <img src="../../images/instagram.png" alt="instagram"> </a></div>
     </div>
 </div>
-<div class="past_lesson"><a href="exercise2.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="#">Следущее</a></div>
+<div class="past_lesson"><a href="exercise6.html">Предыдущее</a></div>
+<div class="next_lesson"><a href="exercise8.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
-        <h1>ЛОДОЧКА</h1>
+        <h1>Лодочка</h1>
         <img class="right_image"  width="500" height="360" src="../../images/lodka.jpg" alt="Лодочка">
         <p>
             Формирует мышечный корсет, уменьшает объём талии, прорабатывает широчайшие мышцы спины. Нагружает большую
