--- a/index.html
+++ b/index.html
@@ -2,34 +2,33 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link href="/styles/style.css" rel="stylesheet" type="text/css">
+    <link href="../styles/style.css" rel="stylesheet" type="text/css">
+    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
     <title></title>
   </head>
   <body>
 
     <div class="top_menu">
       <div class="logo">
-          <a href="#"> <img src="/images/logo.png"> </a>
+          <a href="#"> <img src="../images/logo.png"> </a>
       </div>
       <div class="navigation_bar">
           <div class="nav"> <a href="#"> Упражнения </a> </div>
-          <div class="nav"> <a href="/pages/fitness-center.html"> Фитнес-центры </a> </div>
+          <div class="nav"> <a > Фитнес-центры </a> </div>
           <div class="nav"> <a href="#"> Тренеры </a> </div>
           <div class="nav"> <a href="#"> ссылка </a> </div>
       </div>
       <div class="share_bar">
-          <div class="share"> <a href="#"> <img src="/images/vk.png"> </a> </div>
-          <div class="share"> <a href="#"> <img src="/images/instagram.png"> </a> </div>
+          <div class="share"> <a href="#"> <img src="../images/vk.png"> </a> </div>
+          <div class="share"> <a href="#"> <img src="../images/instagram.png"> </a> </div>
       </div>
     </div>
 
-    <div class="change_lesson">
-      <a class="next" href="#">День1</a>
-    </div>
+
 
     <div class="central_block">
       <div class="logo_second">
-        <img src="/images/couple-fitness.png">
+        <img src="../images/couple-fitness.png">
       </div>
       <div class="start_phrase">
         Начни свой путь к здоровой жизни
@@ -41,7 +40,15 @@
         <a href="#">СТАРТ</a>
       </div>
       </div>
+    <div class="change_lesson">
+      <a class="next" href="#">День1</a>
+    </div>
+    <div class="footer">
+      <p><a href="#">Политика конфиденциальности</a><br>
+        <a href="#">Связаться с нами</a><br><br>
+        All rights reserved<br>&copyА. Хорошилова, 2019</p>
 
+    </div>
 
   </body>
 
