#2: Third page( change exercise9)

--- a/pages/exercises/exercise9.html
+++ b/pages/exercises/exercise9.html
@@ -25,8 +25,8 @@
         <div class="share"><a href="#"> <img src="../../images/instagram.png" alt="instagram"> </a></div>
     </div>
 </div>
-<div class="past_lesson"><a href="exercise6.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="exercise8.html">Следущее</a></div>
+<div class="past_lesson"><a href="exercise8.html">Предыдущее</a></div>
+<div class="next_lesson"><a href="exercise10.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
         <h1>Вакуум для живота</h1>
@@ -44,7 +44,7 @@
             требуется абсолютно никакого дополнительного оборудования. Выполняйте это упражнение на работе, на учебе, в
             машине, в общественном транспорте… Стоя или сидя, более продвинутые варианты – лежа и стоя на
             четвереньках.</p>
-        <h3>Как правильно выполнять:</h3>
+        <h2>Как правильно выполнять:</h2>
         <p>Как и в любом упражнением, подразумевавшим статическое напряжение мышц и полную концентрацию над биомеханикой
             движения, результат на 100% зависит от соблюдения правильной техники. Если техника выполнения вакуума живота
             не отточена до филигранности, вряд ли Вам удастся извлечь из данного упражнения максимум пользы.</p>
@@ -62,6 +62,30 @@
                 попробуйте и убедитесь, что на практике все гораздо сложнее – правильное выполнение вакуума тоже требует
                 не мало времени и усилий.<br></li>
         </ol>
+        <img src="../../images/vakuum.jpg" class="center_image" alt="Вакуум">
+        <p><i>Нагрузка на мышцы брюшного пресса создаётся просто колоссальная, не пугайтесь, если поначалу мышцы сводит
+            судорогой — это нормально.</i></p>
+        <p>Основную нагрузку на себя берет поперечная мышца живота, которая практически не задействуется в обычных
+            упражнениях на пресс и даже у достаточно опытных атлетов зачастую находится в слабом тонусе. Когда
+            поперечная мышца живота придёт в тонус, объём талии непременно будет уменьшаться, визуальный эффект
+            выпирающего живота будет становиться меньше с каждой тренировкой.</p>
+        <p><strong>Постарайтесь зафиксироваться в этом положении максимально долго. Начните с нескольких подходов по
+            15-20 секунд и постепенно увеличивайте нагрузку.</strong> Все, что больше минуты — отличный результат и
+            прекрасная
+            мотивация для других.</p>
+        <h2>Какие существуют противопоказания к выполнению упражнения?</h2>
+        <p>Противопоказания, то есть когда не следует выполнять вакуум живота:</p>
+        <ul>
+            <li>язве желудка или 12-перстной кишки, гастрите и иных проблемах с желудочно-кишечным трактом;</li>
+            <li>воспалении лёгких, астме, пневмонии и других заболеваниях дыхательной системы;</li>
+            <li>грыжах и протрузиях в поясничном и грудном отделах позвоночника;</li>
+            <li>артериальной гипертензии, тахикардии и повышенном внутричерепном давлении.</li>
+        </ul>
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yPYKfLQJQAQ"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </p>
     </div>
 </div>
 <div class="footer">
