#2: Third page( change exercise10)

--- a/pages/exercises/exercise10.html
+++ b/pages/exercises/exercise10.html
@@ -25,8 +25,8 @@
         <div class="share"><a href="#"> <img src="../../images/instagram.png" alt="instagram"> </a></div>
     </div>
 </div>
-<div class="past_lesson"><a href="exercise6.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="exercise8.html">Следущее</a></div>
+<div class="past_lesson"><a href="exercise9.html">Предыдущее</a></div>
+<div class="next_lesson"><a href="exercise11.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
         <h1>Упражнение «Велосипед»</h1>
@@ -44,8 +44,24 @@
             упражнение можно выполнять где и когда угодно.Велосипед полюбился спортсменам со всего мира из-за
             технической простоты и разных по сложности вариаций выполнения. Немаловажно, что для него не требуется
             никаких тренажеров или дополнительного инвентаря – упражнение можно выполнять где и когда угодно.v</p>
-
-        <h3>Как правильно выполнять:</h3>
+        <h2>Польза от упражнения велосипед</h2>
+        <p>Упражнение велосипед для пресса можно отнести к базовым и наиболее эффективным движениям наравне со
+            скручиваниями и подъемами ног в висе. Его эффективность обусловлена тем, что в работу включаются все волокна
+            мышц пресса. Работа в ограниченной амплитуде и в режиме нон-стоп не дает мышцам расслабиться даже на
+            секунду. Это приводит к гипоксии мышечных волокон и анаэробному гликолизу (мышцы быстрее достигают «отказа»
+            за счет задержки в клетках молочной кислоты).</p>
+        <img class="left_image" src="../../images/uprazhnenie-velosiped-mushcy.jpg" alt="Велосипед">
+        <p>Упражнение нагружает все отделы мышц брюшного пресса. Оно также косвенно задействует широчайшие мышцы спины,
+            подвздошно-поясничную мышцу, межреберные и зубчатые мышцы и ягодицы. Упражнение велосипед также сможет
+            сделать Ваш пресс более рельефным и уменьшить объем талии. А в сочетании с низкоуглеводной диетой,
+            регулярными силовыми и кардио тренировками и выполнением упражнения вакуум желаемый результат будет
+            достигнут значительно быстрее.</p>
+        <p>Помимо очевидной пользы в проработке мышц пресса, упражнение велосипед может помочь Вам сбросить лишний вес
+            за счет разгона метаболизма и ускорения окисления жировых клеток. Невозможно точно определить, сколько
+            калорий сжигает упражнение велосипед, но любой опытный атлет подтвердит, что оно вызывает колоссальные
+            энергозатраты, а из-за сильного чувства жжения бывает даже трудно стоять после последнего подхода.
+            Разумеется, при соблюдении правильной техники, с которой Вы можете ознакомиться ниже.</p>
+        <h2>Как правильно выполнять:</h2>
         <p>Существует несколько разновидностей выполнения этого упражнения: с вертикально поднятыми ногами, с
             удерживанием фитбола между ног и т. д. Сейчас мы рассмотрим самый распространенный и действенный метод, при
             котором атлет сокращает все мышцы брюшного пресса за счет одновременного движения ногами, руками и поворота
@@ -72,6 +88,52 @@
                 резкие движения здесь недопустимы.
             </li>
         </ol>
+        <p>Велосипед – простое с технической стороны вопроса упражнение, однако, и в нем есть свои маленькие тонкости и
+            секреты, соблюдая которые Вы сможете извлечь максимум пользы из этого упражнения. Не все из них очевидны на
+            первый взгляд, поэтому многие новички выполняют это упражнение с техническими погрешностями. Чтобы это
+            исправить, следует обратиться за помощью к грамотному персональному тренеру. Или просто прочитать нашу
+            статью до конца, сэкономив свои время и деньги.</p>
+        <strong>Ниже мы разберем, как НЕ стоит выполнять упражнение велосипед на пресс:</strong>
+        <ul>
+            <li>Выполняйте упражнение велосипед на твердой неподвижной поверхности. Если Вы делаете его на мягкой
+                поверхности, то будете хуже контролировать движение и тратить силы на стабилизацию положения корпуса.
+            </li>
+            <li>Не создавайте осевую нагрузку на шейный отдел позвоночника. Выполняя велосипед, мы просто кладем ладони
+                на затылок, но ни в коем случае не упираемся в него со всей силы. Да, Вам может показаться, что это
+                несколько облегчает выполнение упражнения, но давайте не будем заниматься самообманом. Тренируя пресс,
+                Вы должны работать прессом, а не чем-то другим.
+            </li>
+            <li>Соблюдайте равномерный темп на протяжении всего подхода, движение должно быть неторопливым и плавным.
+                Если будете выполнять упражнение слишком быстро, Вы вряд ли сможете полностью сконцентрироваться на
+                растяжении и сокращении мышц пресса.
+            </li>
+            <li>Соблюдайте естественные для Вашей анатомии углы, никакого дискомфорта быть не должно. Например, если
+                чувствуете неприятные растягивающие ощущения в районе крестца, значит, поднимаете ноги слишком сильно, и
+                следует уменьшить амплитуду движения.
+            </li>
+            <li>Не гонитесь за количеством повторений. В этом мало смысла, так как в подобных упражнениях нам прежде
+                всего нужно хорошее сокращение мышц за счет налаженной нейромышечной связи. А количество повторов и
+                подходов — это уже второстепенное дело. Другой вариант – попробуйте выполнять упражнение велосипед на
+                время, например, начните с 30 секунд и плавно увеличивайте нагрузку. Так Вы подсознательно будете
+                отдавать себе команду, что «отказ» мышц Вашего пресса должен наступить именно к моменту истечения
+                времени.
+            </li>
+            <li>Не спешите использовать дополнительное отягощение в этом упражнении. Даже если Вы тренируетесь не первый
+                год, и мышцы Вашего пресса сильны и хорошо развиты, начните выполнение велосипеда с классического
+                варианта – так Вы лучше поймете биомеханику движения и научитесь правильно сокращать мышцы пресса под
+                разными углами.
+            </li>
+            <li>Разнообразие в тренировочном процессе – ключ к постоянному прогрессу и спортивному долголетию. Не
+                бойтесь экспериментировать и вносить в свою тренировочную программу что-то новое. Например, упражнение
+                велосипед можно выполнять, как в рамках отдельной тренировки на пресс, в конце тренировки на спину или
+                ноги, так и в составе кроссфит комплексов.
+            </li>
+        </ul>
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/S_g3oBJKpRM"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </p>
     </div>
 </div>
 <div class="footer">
