#2: Third page( change links)

--- a/pages/exercises/exercise8.html
+++ b/pages/exercises/exercise8.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div class="past_lesson"><a href="exercise7.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="exercise1.html">Следущее</a></div>
+<div class="next_lesson"><a href="exercise9.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
         <h1>Супермен</h1>
@@ -42,10 +42,12 @@
         <ol>
             <li>Лягте на пол, протяните руки и ноги, держа их приблизительно по ширине плеч
             </li>
-            <li>Далее необходимо слегка поднять ноги и руки так, чтобы вы опирались только на торс и грудь. </li>
-            <li>При этом, прогните поясницу насколько это возможно и сохраняйте такое положение на протяжении всего подхода.
+            <li>Далее необходимо слегка поднять ноги и руки так, чтобы вы опирались только на торс и грудь.</li>
+            <li>При этом, прогните поясницу насколько это возможно и сохраняйте такое положение на протяжении всего
+                подхода.
             </li>
-        </ol><br>
+        </ol>
+        <br>
         <h3>Поначалу будет достаточно сделать 3 сета по 30 секунд.</h3>
         <h3>Старайтесь тянуться как можно сильнее, это добавит эффективности.</h3>
         <br>
