#2: Third page(change exercise9)

--- a/pages/exercises/exercise9.html
+++ b/pages/exercises/exercise9.html
@@ -30,7 +30,7 @@
 <div class="main_info">
     <div class="main_lesson">
         <h1>Вакуум для живота</h1>
-        <img class="right_image" src="../../images/uprazhnenie-vakuum-dlya-zhivota.jpg" alt="Вакуум">
+        <img class="right_image" width="500" src="../../images/uprazhnenie-vakuum-dlya-zhivota.jpg" alt="Вакуум">
         <p>
             Вакуум для живота — упражнение, рекомендуемое к выполнению мужчинам и женщинам, стремящимся уменьшить свои
             объемы талии. Оно представляет собой максимальное втягивание живота внутрь и задержку в этом положении на
@@ -44,7 +44,7 @@
             требуется абсолютно никакого дополнительного оборудования. Выполняйте это упражнение на работе, на учебе, в
             машине, в общественном транспорте… Стоя или сидя, более продвинутые варианты – лежа и стоя на
             четвереньках.</p>
-        <h2>Как правильно выполнять:</h2>
+        <h3>Как правильно выполнять:</h3>
         <p>Как и в любом упражнением, подразумевавшим статическое напряжение мышц и полную концентрацию над биомеханикой
             движения, результат на 100% зависит от соблюдения правильной техники. Если техника выполнения вакуума живота
             не отточена до филигранности, вряд ли Вам удастся извлечь из данного упражнения максимум пользы.</p>
@@ -70,8 +70,7 @@
             поперечная мышца живота придёт в тонус, объём талии непременно будет уменьшаться, визуальный эффект
             выпирающего живота будет становиться меньше с каждой тренировкой.</p>
         <p><strong>Постарайтесь зафиксироваться в этом положении максимально долго. Начните с нескольких подходов по
-            15-20 секунд и постепенно увеличивайте нагрузку.</strong> Все, что больше минуты — отличный результат и
-            прекрасная
+            15-20 секунд и постепенно увеличивайте нагрузку.</strong> Все, что больше минуты — отличный результат и прекрасная
             мотивация для других.</p>
         <h2>Какие существуют противопоказания к выполнению упражнения?</h2>
         <p>Противопоказания, то есть когда не следует выполнять вакуум живота:</p>
