all_fitness_centers page

--- a/pages/all_fitness_centers.html
+++ b/pages/all_fitness_centers.html
@@ -30,26 +30,20 @@
     <div class="slider">
       <div class="item">
         <a href="#">
-        <img src="../images/back.jpg">
-        <div class="slideText">Спина</div>
+        <img src="../images/alex-fitness.jpg">
+        <div class="slideText">Alex Fitness</div>
       </div>
 
       <div class="item">
         <a href="#">
-        <img src="../images/arms.jpg">
-        <div class="slideText">Руки</div>
+        <img src="../images/botek-wellnes.jpg">
+        <div class="slideText">Ботек Wellnes</div>
       </div>
 
       <div class="item">
         <a href="#">
-        <img src="../images/legs.jpg">
-        <div class="slideText">Ноги</div>
-      </div>
-
-      <div class="item">
-        <a href="#">
-        <img src="../images/press.jpg">
-        <div class="slideText">Пресс</div>
+        <img src="../images/hammer.jpg">
+        <div class="slideText">Hammer</div>
       </div>
 
       <a class="prev_item" onclick="minusSlide()">&#10094;</a>
@@ -61,10 +55,16 @@
       <span class="slider-dots_item" onclick="currentSlide(1)"></span>
       <span class="slider-dots_item" onclick="currentSlide(2)"></span>
       <span class="slider-dots_item" onclick="currentSlide(3)"></span>
-      <span class="slider-dots_item" onclick="currentSlide(4)"></span>
     </div>
+    <div class="scroll__choose">
+      <div class="nav">
+        <a href="#">Показать на карте</a>
+      </div>
 
     </div>
+    </div>
+
+
 
   <div class="footer">
     <p><a href="#">Политика конфиденциальности</a><br>
