--- a/pages/index.html
+++ b/pages/index.html
@@ -13,10 +13,9 @@
           <a href="#"> <img src="../images/logo.png"> </a>
       </div>
       <div class="navigation_bar">
-          <div class="nav"> <a href="#"> Упражнения </a> </div>
-          <div class="nav"> <a > Фитнес-центры </a> </div>
+          <div class="nav"> <a href="all_exercises.html"> Упражнения </a> </div>
+          <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
           <div class="nav"> <a href="#"> Тренеры </a> </div>
-          <div class="nav"> <a href="#"> ссылка </a> </div>
       </div>
       <div class="share_bar">
           <div class="share"> <a href="#"> <img src="../images/vk.png"> </a> </div>
