added treners and did some changes

--- a/pages/all_treners.html
+++ b/pages/all_treners.html
@@ -28,21 +28,21 @@
   <div class="central">
     <div class="slider">
       <div class="item">
-        <a href="https://samara.alexfitness.ru/?gclid=Cj0KCQjwxMjnBRCtARIsAGwWnBOqVv91xyiLpvELYkXLBbl56pnc3JJkIgh8J42huoAXHGC_vhcQ2JcaAmUwEALw_wcB">
-        <img src="../images/alex-fitness.jpg">
-        <div class="slideText">Alex Fitness</div>
+        <a href="traners/anastas.html">
+        <img src="../images/Anastas.jpg">
+        <div class="slideText">Анастас</div>
       </div>
 
       <div class="item">
-        <a href="http://botek-fitness.ru/card/?utm_source=google-adwords&utm_campaign=Poisk-Brendovaya-Obchaya&utm_term=%2B%D0%B1%D0%BE%D1%82%D0%B5%D0%BA%20%2Bwellness&utm_content=1t1&utm_medium=cpc&gclid=Cj0KCQjwxMjnBRCtARIsAGwWnBNv0neDnotd8KOwFg_FX4Oivl9Lq_HTMLg5LYCYBFYx6Cr91nQbmg8aAmonEALw_wcB">
-        <img src="../images/botek-wellnes.jpg">
-        <div class="slideText">Ботек Wellnes</div>
+        <a href="traners/max.html">
+        <img src="../images/Max.jpg">
+        <div class="slideText">Максимильян</div>
       </div>
 
       <div class="item">
-        <a href="https://vk.com/hammersamara">
-        <img src="../images/hammer.jpg">
-        <div class="slideText">Hammer</div>
+        <a href="traners/katya.html">
+        <img src="../images/Katya.jpg">
+        <div class="slideText">Котенька</div>
       </div>
 
       <a class="prev_item" onclick="minusSlide()">&#10094;</a>
@@ -55,15 +55,8 @@
       <span class="slider-dots_item" onclick="currentSlide(2)"></span>
       <span class="slider-dots_item" onclick="currentSlide(3)"></span>
     </div>
-    <!-- <div class="scroll__choose">
-      <div class="nav">
-        <a href="#">Показать на карте</a>
-      </div> -->
 
     </div>
-    </div>
-
-
 
   <div class="footer">
     <p><a href="#">Политика конфиденциальности</a><br>
