--- a/pages/all_exercises.html
+++ b/pages/all_exercises.html
@@ -17,8 +17,7 @@
     <div class="navigation_bar">
       <div class="nav"> <a href="all_exercises.html"> Упражнения </a> </div>
       <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
-      <div class="nav"><a href="#"> Тренеры </a></div>
-      <div class="nav"><a href="#"> ссылка </a></div>
+      <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
     </div>
     <div class="share_bar">
       <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
