--- a/pages/exercises/exercise2.html
+++ b/pages/exercises/exercise2.html
@@ -13,10 +13,9 @@
         <a href="#"> <img src="../../images/logo.png" alt="logo"> </a>
     </div>
     <div class="navigation_bar">
-        <div class="nav "><a href="#"> Упражнения </a></div>
-        <div class="nav"><a href="#"> Фитнес-центры </a></div>
-        <div class="nav"><a href="#"> Тренеры </a></div>
-        <div class="nav"><a href="#"> Полезность спорта </a></div>
+      <div class="nav"> <a href="../all_exercises.html"> Упражнения </a> </div>
+      <div class="nav"> <a href='../all_fitness_centers.html'> Фитнес-центры </a> </div>
+      <div class="nav"><a href="../all_treners.html"> Тренеры </a></div>
     </div>
     <div class="icon_menu" onclick="clickMenu()"><img src="../../images/menu.png" alt="menu"></div>
     <div class="share_bar">
