--- a/pages/exercises/exercise11.html
+++ b/pages/exercises/exercise11.html
@@ -10,10 +10,10 @@
 <body>
 <div class="top_menu">
     <div class="logo">
-        <a href="#"> <img src="../../images/logo.png" alt="logo"> </a>
+        <a href="../index.html"> <img src="../../images/logo.png" alt="logo"> </a>
     </div>
     <div class="navigation_bar">
-      <div class="nav"> <a href="../all_exercises.html"> Упражнения </a> </div>
+      <div class="nav"> <a href="../all_type_exercises.html"> Упражнения </a> </div>
       <div class="nav"> <a href='../all_fitness_centers.html'> Фитнес-центры </a> </div>
       <div class="nav"><a href="../all_treners.html"> Тренеры </a></div>
     </div>
@@ -25,7 +25,7 @@
     </div>
 </div>
 <div class="past_lesson"><a href="exercise10.html">Предыдущее</a></div>
-<div class="next_lesson"><a href="exercise12.html">Следущее</a></div>
+<div class="next_lesson"><a href="exercise1.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
         <h1>Жим в Смите лежа</h1>
