--- a/pages/exercises/exercise9.html
+++ b/pages/exercises/exercise9.html
@@ -10,10 +10,10 @@
 <body>
 <div class="top_menu">
     <div class="logo">
-        <a href="#"> <img src="../../images/logo.png" alt="logo"> </a>
+        <a href="../index.html"> <img src="../../images/logo.png" alt="logo"> </a>
     </div>
     <div class="navigation_bar">
-      <div class="nav"> <a href="../all_exercises.html"> Упражнения </a> </div>
+      <div class="nav"> <a href="../all_type_exercises.html"> Упражнения </a> </div>
       <div class="nav"> <a href='../all_fitness_centers.html'> Фитнес-центры </a> </div>
       <div class="nav"><a href="../all_treners.html"> Тренеры </a></div>
     </div>
