#2: refactoring all other pages

--- a/pages/all_fitness_centers.html
+++ b/pages/all_fitness_centers.html
@@ -15,7 +15,7 @@
       <a href="#"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
-      <div class="nav"> <a href="all_exercises.html"> Упражнения </a> </div>
+      <div class="nav"> <a href="all_type_exercises.html"> Упражнения </a> </div>
       <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
       <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
     </div>
@@ -31,18 +31,21 @@
         <a href="https://samara.alexfitness.ru/?gclid=Cj0KCQjwxMjnBRCtARIsAGwWnBOqVv91xyiLpvELYkXLBbl56pnc3JJkIgh8J42huoAXHGC_vhcQ2JcaAmUwEALw_wcB">
         <img src="../images/alex-fitness.jpg">
         <div class="slideText">Alex Fitness</div>
+        </a>
       </div>
 
       <div class="item">
         <a href="http://botek-fitness.ru/card/?utm_source=google-adwords&utm_campaign=Poisk-Brendovaya-Obchaya&utm_term=%2B%D0%B1%D0%BE%D1%82%D0%B5%D0%BA%20%2Bwellness&utm_content=1t1&utm_medium=cpc&gclid=Cj0KCQjwxMjnBRCtARIsAGwWnBNv0neDnotd8KOwFg_FX4Oivl9Lq_HTMLg5LYCYBFYx6Cr91nQbmg8aAmonEALw_wcB">
         <img src="../images/botek-wellnes.jpg">
         <div class="slideText">Ботек Wellnes</div>
+        </a>
       </div>
 
       <div class="item">
         <a href="https://vk.com/hammersamara">
         <img src="../images/hammer.jpg">
         <div class="slideText">Hammer</div>
+        </a>
       </div>
 
       <a class="prev_item" onclick="minusSlide()">&#10094;</a>
