--- a/pages/all_treners.html
+++ b/pages/all_treners.html
@@ -15,7 +15,7 @@
       <a href="#"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
-      <div class="nav"> <a href="all_exercises.html"> Упражнения </a> </div>
+      <div class="nav"> <a href="all_type_exercises.html"> Упражнения </a> </div>
       <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
       <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
     </div>
@@ -31,25 +31,27 @@
         <a href="traners/anastas.html">
         <img src="../images/Anastas.jpg">
         <div class="slideText">Анастас</div>
+        </a>
       </div>
 
       <div class="item">
         <a href="traners/max.html">
         <img src="../images/Max.jpg">
         <div class="slideText">Максимильян</div>
+        </a>
       </div>
 
       <div class="item">
         <a href="traners/katya.html">
         <img src="../images/Katya.jpg">
         <div class="slideText">Котенька</div>
+        </a>
       </div>
 
       <a class="prev_item" onclick="minusSlide()">&#10094;</a>
       <a class="next_item" onclick="plusSlide()">&#10095;</a>
 
     </div>
-
     <div class="slider-dots">
       <span class="slider-dots_item" onclick="currentSlide(1)"></span>
       <span class="slider-dots_item" onclick="currentSlide(2)"></span>
