--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
           <a href="#"> <img src="../images/logo.png"> </a>
       </div>
       <div class="navigation_bar">
-        <div class="nav"> <a href="all_exercises.html"> Упражнения </a> </div>
+        <div class="nav"> <a href="all_type_exercises.html"> Упражнения </a> </div>
         <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
         <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
       </div>
