--- a/pages/all_exercises.html
+++ b/pages/all_exercises.html
@@ -1,76 +1,121 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <title></title>
-    <script src="../scripts/script.js">
-
-    </script>
-  </head>
-  <body>
-
-  <div class="top_menu">
+    <script src="../scripts/script.js"></script>
+    <title>Все упражнения</title>
+</head>
+<body>
+<div class="top_menu">
     <div class="logo">
-      <a href="#"> <img src="../images/logo.png"> </a>
+        <a href="index.html"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
-      <div class="nav"> <a href="all_exercises.html"> Упражнения </a> </div>
-      <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
-      <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
+        <div class="nav"> <a href="all_type_exercises.html"> Упражнения </a> </div>
+        <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
+        <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
     </div>
     <div class="share_bar">
-      <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
-      <div class="share"><a href="#"> <img src="../images/instagram.png"> </a></div>
+        <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
+        <div class="share"><a href="#"> <img src="../images/instagram.png"> </a></div>
     </div>
-  </div>
+</div>
 
-  <div class="central">
+<div class="central">
     <div class="slider">
-      <div class="item">
-        <a href="#">
-        <img src="../images/back.jpg">
-        <div class="slideText">Спина</div>
-      </div>
+        <div class="item">
+            <a href="exercises/exercise1.html">
+                <img src="../images/lesson1.jpg" alt="Скручивания">
+                <div class="slideText">Скручивания</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise2.html">
+                <img src="../images/zhim-lezha.jpg" alt="Жим лежа">
+                <div class="slideText">Жим лежа</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise3.html">
+                <img src="../images/rastyazhka_shey.jpg" alt="Растяжка шеи">
+                <div class="slideText">Растяжка шеи</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise4.html">
+                <img src="../images/planka-mushcy.jpeg" alt="Планка">
+                <div class="slideText">Планка</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise5.html">
+                <img src="../images/burpi.jpg" alt="Бурпи">
+                <div class="slideText">Бурпи</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise6.html">
+                <img src="../images/cat.jpg" alt="Кошка">
+                <div class="slideText">Кошка</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise7.html">
+                <img src="../images/lodka.jpg" alt="Лодочка">
+                <div class="slideText">Лодочка</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise8.html">
+                <img src="../images/superman.jpg" alt="Супермен">
+                <div class="slideText">Супермен</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise9.html">
+                <img src="../images/vakuum.jpg" alt="Вакуум">
+                <div class="slideText">Вакуум</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise10.html">
+                <img src="../images/uprazhnenie-velosiped.jpg" alt="Велосипед">
+                <div class="slideText">Велосипед</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise11.html">
+                <img src="../images/zhim-v-smite-lezha.jpg" alt="Жим в Смите лежа">
+                <div class="slideText">Жим в Смите лежа</div>
+            </a>
+        </div>
 
-      <div class="item">
-        <a href="#">
-        <img src="../images/arms.jpg">
-        <div class="slideText">Руки</div>
-      </div>
-
-      <div class="item">
-        <a href="#">
-        <img src="../images/legs.jpg">
-        <div class="slideText">Ноги</div>
-      </div>
-
-      <div class="item">
-        <a href="#">
-        <img src="../images/press.jpg">
-        <div class="slideText">Пресс</div>
-      </div>
-
-      <a class="prev_item" onclick="minusSlide()">&#10094;</a>
-      <a class="next_item" onclick="plusSlide()">&#10095;</a>
+        <a class="prev_item" onclick="minusSlide()">&#10094;</a>
+        <a class="next_item" onclick="plusSlide()">&#10095;</a>
 
     </div>
 
     <div class="slider-dots">
-      <span class="slider-dots_item" onclick="currentSlide(1)"></span>
-      <span class="slider-dots_item" onclick="currentSlide(2)"></span>
-      <span class="slider-dots_item" onclick="currentSlide(3)"></span>
-      <span class="slider-dots_item" onclick="currentSlide(4)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(1)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(2)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(3)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(4)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(5)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(6)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(7)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(8)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(9)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(10)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(11)"></span>
     </div>
 
-    </div>
+</div>
 
-  <div class="footer">
+<div class="footer">
     <p><a href="#">Политика конфиденциальности</a><br>
-      <a href="#">Связаться с нами</a><br><br>
-      All rights reserved<br>&copyА. Хорошилова, 2019</p>
-
-  </div>
-  </body>
-
+        <a href="#">Связаться с нами</a><br><br>
+        All rights reserved<br>&copyЕ. Денисова, 2019</p>
+</div>
+</body>
 </html>
